Rename from BugJar to BugPack to avoid confusion between the two concepts.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "bugjar",
+    "name": "bugpack",
     "version": "0.0.1",
-    "main": "./lib/BugJar.js",
+    "main": "./lib/BugPack.js",
     "private": true
 }
